# understory

./: .flake8  .gitignore  CNAME  CONTRIBUTING.md  README.md  example.py  index.test.js  index.ts  main.py  package.json  pyproject.toml  pyrightconfig.json  test_example.py  tsconfig.json  understory.js  understory.ts  webpack.config.js
canopy/: __init__.py
docs/: index.html
example/: __init__.py
example/templates/: template.html
extension/: README.md  package.json  tsconfig.json  webpack.config.js
extension/src/: background.ts  content.ts  devtools.ts  home.ts  newtab.ts  popup.ts  sidebar.ts  theme.ts
python/: main.py  pyproject.toml
python/canopy/: __init__.py
python/tests/: generate_docs.py  results.json  test_indieweb.py
python/understory/: mf.py
python/understory/indieauth/: __init__.py
python/understory/indieauth/client/: __init__.py
python/understory/indieauth/server/: __init__.py
python/understory/mm/: templating.py
python/understory/voice/: __init__.py  __main__.py
python/understory/web/: __init__.py
python/understory/web/framework/: __init__.py
server/: README.md  main.py  pyproject.toml
server/canopy/: __init__.py
server/canopy/templates/: template.html
server/tests/: example_post.json
server/understory/: kaleidoscope.py  mf.py
server/understory/indieauth/client/: __init__.py
server/understory/micropub/: __init__.py  __main__.py
server/understory/microsub/: __init__.py  server.py
server/understory/webmention/: __init__.py
tests/: doc_root.html  docs_template.html  test_indieweb.py
typescript/: webpack.config.js
understory/: kv.py  loveliness.py  sql.py
understory/apps/jobs/: __init__.py
understory/apps/sites/: __init__.py
understory/data/: __init__.py
understory/editor/: __init__.py
understory/host/: __init__.py  digitalocean.py
understory/indieweb/: __init__.py
understory/indieweb/indieauth/: __init__.py
understory/indieweb/webmention/: __init__.py
understory/indieweb/websub/: __init__.py
understory/reader/: __init__.py
understory/web/: __init__.py  agent.py
understory/web/framework/: __init__.py
web/: __init__.py
web/framework/: __init__.py
webjs/: webpack.config.js
(+17 files in other folders)
