[tool.poetry]
name = "understory"
version = "0.0.93-alpha.0"
description = "Social web framework"
authors = [ "Angelo Gladding <angelo@ragt.ag>" ]
license = "AGPL-3.0-or-later"
readme = "README.md"
keywords = [ "IndieWeb" ]
packages = [ { include = "web" }, { include = "understory" } ]

[tool.poetry.urls]
Homepage = "https://understory.stream"

[tool.poetry.plugins."web.apps"]
braid = "understory.braid:app"
cache = "understory.cache:app"
data = "understory.data:app"
jobs = "understory.jobs:app"
owner = "understory.owner:app"
providers = "understory.providers:app"
search = "understory.search:app"
sites = "understory.sites:app"
system = "understory.system:app"
tracker = "understory.tracker:app"
indieauth_client = "understory.indieauth.client:app"
indieauth_server = "understory.indieauth.server:app"
micropub_server = "understory.micropub.posts:app"
micropub_content = "understory.micropub.content:app"
micropub_media = "understory.micropub.media:app"
microsub_server = "understory.microsub:app"
webmention_endpoint = "understory.webmention:app"
websub_endpoint = "understory.websub:app"
editor = "understory.editor:app"
reader = "understory.reader:app"

[tool.poetry.scripts]
web = "web.__main__:main"

[tool.poetry.dependencies]
python = "^3.9"
pendulum = "^2.1.2"
semver = "^2.13.0"
emoji = "^1.2.0"
gunicorn = "^20.1.0"
requests = { extras = ["socks"], version = "^2.27.1" }
gevent = "^21.1.2"
jsonpatch = "^1.32"
pycryptodome = "^3.10.1"
Unidecode = "^1.2.0"
watchdog = "^2.1.3"
httpagentparser = "^1.9.1"
mimeparse = "^0.1.3"
acme-tiny = "^4.1.0"
dnspython = "^2.1.0"
regex = "^2021.7.6"
certifi = "^2021.10.8"
waitress = "^2.0.0"
Pygments = "^2.11.2"

[tool.poetry.dev-dependencies]
ipython = "^8.0.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
webdriver-manager = "^3.4.2"
black = "^21.6b0"
pytest-gevent = "^1.1.0"
isort = "^5.9.2"
flake8 = "^3.9.2"
flake8-docstrings = "^1.6.0"
pep8-naming = "^0.12.0"
pydeps = "^1.10.12"
radon = "^5.1.0"
Nuitka = "^0.6.19"
coverage = "^6.3.1"
pynvim = "^0.4.3"

[build-system]
requires = [ "poetry-core>=1.0.0" ]
build-backend = "poetry.core.masonry.api"
